--- a/myproject/myapp/templates/base.html
+++ b/myproject/myapp/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <title>{% block title %}Team Equalizer{% endblock %}</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
   <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -22,6 +22,9 @@
       </a>
       <a href="{% url 'vote_list' %}" class="top-menu">
         <span class="glyphicon glyphicon-th-list">View your votes</span>
+      </a>
+      <a href="{% url 'roster_selection' %}", class="top-menu">
+        <span class="glyphicon glyphicon-stats">Roster selection</span>
       </a>
     </div>
     {% endif %}
