--- a/myproject/myapp/templates/vote_edit.html
+++ b/myproject/myapp/templates/vote_edit.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}Equalizer | Edit Vote{% endblock %}
+
 {% block content %}
-    <h2>Edit post</h2>
+    <h2>Edit Vote</h2>
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
