--- a/myproject/myapp/templates/home.html
+++ b/myproject/myapp/templates/home.html
@@ -1,14 +1,13 @@
 <!-- templates/home.html-->
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Equalizer | Home{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">logout</a></p>
 {% else %}
-  <p>You are not logged in</p>
+  <p>You are not logged in. Please login to your account or sign up to create one using the links below.</p>
   <a href="{% url 'login' %}">login</a>
   <a href="{% url 'signup' %}">sign up</a>
 {% endif %}
