--- a/myproject/myapp/templates/roster_selection.html
+++ b/myproject/myapp/templates/roster_selection.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Equalizer | Player Selection{% endblock %}
+
 {% block content %}
 
 <h2>Select active players</h2>
