--- a/myproject/myapp/templates/team_rosters.html
+++ b/myproject/myapp/templates/team_rosters.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Equalizer | Your Teams{% endblock %}
+
 {% load myapp_extras %}
 
 {% block content %}
