--- a/myproject/myapp/templates/vote_list.html
+++ b/myproject/myapp/templates/vote_list.html
@@ -1,43 +1,49 @@
 {% extends 'base.html' %}
 
+{% block title %}Equalizer | Your Votes{% endblock %}
+
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-            <h1>
-                <a href="{% url 'vote_detail' pk=post.pk %}">{{ post.player }}</a>
-            </h1>
-            <div>
-                <table>
-                    <tr>
-                        <th>Metric</th>
-                        <th>Your Vote</th>
-                    </tr>
-                    <tr>
-                        <td>Skill A</td>
-                        <td>{{ post.skill_a }}</td>
-                    </tr>
-                    <tr>
-                        <td>Skill B</td>
-                        <td>{{ post.skill_b }}</td>
-                    </tr>
-                    <tr>
-                        <td>Skill C</td>
-                        <td>{{ post.skill_c }}</td>
-                    </tr>
-                    <tr>
-                        <td>Skill D</td>
-                        <td>{{ post.skill_d }}</td>
-                    </tr>
-                    <tr>
-                        <td>Skill E</td>
-                        <td>{{ post.skill_e }}</td>
-                    </tr>
-                </table>
-            </div>
-            <p>{{ post.text|linebreaksbr }}</p>
+
+<h1>Your Votes</h1>
+
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
         </div>
-    {% endfor %}
+        <h2>
+            <a href="{% url 'vote_detail' pk=post.pk %}">{{ post.player }}</a>
+        </h2>
+        <div>
+            <table>
+                <tr>
+                    <th>Metric</th>
+                    <th>Your Vote</th>
+                </tr>
+                <tr>
+                    <td>Skill A</td>
+                    <td>{{ post.skill_a }}</td>
+                </tr>
+                <tr>
+                    <td>Skill B</td>
+                    <td>{{ post.skill_b }}</td>
+                </tr>
+                <tr>
+                    <td>Skill C</td>
+                    <td>{{ post.skill_c }}</td>
+                </tr>
+                <tr>
+                    <td>Skill D</td>
+                    <td>{{ post.skill_d }}</td>
+                </tr>
+                <tr>
+                    <td>Skill E</td>
+                    <td>{{ post.skill_e }}</td>
+                </tr>
+            </table>
+        </div>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+
 {% endblock %}
