--- a/myproject/myapp/templates/votingForm.html
+++ b/myproject/myapp/templates/votingForm.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}Equalizer | New Vote{% endblock %}
+
 {% block content %}
-    <h2>Cast your vote!</h2>
+    <h2>Player Rating Form</h2>
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
