[EDIT] - Styling edits

--- a/myproject/myapp/static/css/style.css
+++ b/myproject/myapp/static/css/style.css
@@ -2,10 +2,77 @@ h1 a, h2 a {
     color: #C25100;
 }
 
-body {
-    padding-left: 15px;
+div.nav-bar {
+    text-align: center;
+    font-size: 20px;
+    background-color: orange;
+    height: 65px;
 }
 
-div.nav-bar {
-    padding-right: 10px;
+div.nav-bar span {
+    padding-right: 20px;
+    color: darkblue;
+    text-transform: uppercase;
+    font-size: 25px;
+    vertical-align: middle;
+    height: 100%;
+}
+
+div.nav-bar span:hover {
+    font-weight: 800;
+}
+
+div.main-block {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+
+.top-menu span {
+    line-height: 55px;
+}
+
+.glyphicon::before {
+    padding-right: 5px;
+}
+
+table, th, tr, td {
+    border: 1px solid lightgray;
+    padding: 0px 10px 0px 10px;
+    text-align: center;
+}
+
+.post {
+    display: inline-block;
+    padding-right: 50px;
+}
+
+form label {
+    width: 90px;
+}
+
+form.post-form.players label {
+    width: 100%;
+    font-weight: normal;
+    font-size: 15px;
+    display: block;
+}
+
+form.post-form.players ul {
+    padding-left: 0px;
+}
+
+input[type="checkbox"] {
+    transform: scale(1);
+    vertical-align: top;
+}
+
+
+
+form.post-form.players li {
+    list-style: none;
+}
+
+form.post-form.players > p > label {
+    display: none;
 }
