--- a/myproject/myapp/templates/base.html
+++ b/myproject/myapp/templates/base.html
@@ -31,8 +31,10 @@
       </a>
     </div>
     {% endif %}
-    {% block content %}
-    {% endblock %}
+    <div class="main-block">
+      {% block content %}
+      {% endblock %}
+    </div>
   </main>
 </body>
 </html>
