--- a/myproject/myapp/templates/vote_list.html
+++ b/myproject/myapp/templates/vote_list.html
@@ -21,24 +21,24 @@
                     <th>Your Vote</th>
                 </tr>
                 <tr>
-                    <td>Skill A</td>
-                    <td>{{ post.skill_a }}</td>
+                    <td>Attack</td>
+                    <td>{{ post.attack }}</td>
                 </tr>
                 <tr>
-                    <td>Skill B</td>
-                    <td>{{ post.skill_b }}</td>
+                    <td>Defense</td>
+                    <td>{{ post.defense }}</td>
                 </tr>
                 <tr>
-                    <td>Skill C</td>
-                    <td>{{ post.skill_c }}</td>
+                    <td>Possession</td>
+                    <td>{{ post.possession }}</td>
                 </tr>
                 <tr>
-                    <td>Skill D</td>
-                    <td>{{ post.skill_d }}</td>
+                    <td>Stamina</td>
+                    <td>{{ post.stamina }}</td>
                 </tr>
                 <tr>
-                    <td>Skill E</td>
-                    <td>{{ post.skill_e }}</td>
+                    <td>Mobility</td>
+                    <td>{{ post.mobility }}</td>
                 </tr>
             </table>
         </div>
