--- a/myproject/myapp/templates/team_rosters.html
+++ b/myproject/myapp/templates/team_rosters.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Equalizer | Your Teams{% endblock %}
-
 {% load myapp_extras %}
 
-{% block content %}
+{% block title %}Equalizer | Your Teams{% endblock %}
 
-<h1>Your balanced teams:</h1>
+{% block heading %}Your Teams{% endblock %}
+
+{% block content %}
 
 <div class="equalizer_results">
     <table class="teams">
