--- a/myproject/myapp/templates/votingForm.html
+++ b/myproject/myapp/templates/votingForm.html
@@ -2,11 +2,14 @@
 
 {% block title %}Equalizer | New Vote{% endblock %}
 
+{% block heading %}Player Skills Rating Form{% endblock %}
+
 {% block content %}
-    <h2>Player Rating Form</h2>
+<div class="voting_form">
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
+</div>
 {% endblock %}
