--- a/myproject/myapp/templates/base.html
+++ b/myproject/myapp/templates/base.html
@@ -31,9 +31,15 @@
       </a>
     </div>
     {% endif %}
+    <div class="heading_banner">
+      <h2>
+        {% block heading %}
+        {% endblock %}
+      </h2>
+    </div>
     <div class="main-block">
       {% block content %}
-      {% endblock %}
+      {% endblock content %}
     </div>
   </main>
 </body>
