--- a/myproject/myapp/templates/registration/login.html
+++ b/myproject/myapp/templates/registration/login.html
@@ -3,8 +3,9 @@
 
 {% block title %}Login{% endblock %}
 
+{% block heading %}Login{% endblock %}
+
 {% block content %}
-<h2>Login</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
