--- a/myproject/myapp/templates/signup.html
+++ b/myproject/myapp/templates/signup.html
@@ -3,11 +3,18 @@
 
 {% block title %}Sign Up{% endblock %}
 
+{% block heading %}
+<h2>New User Registration</h2>
+{% endblock %}
+
 {% block content %}
-  <h2>Sign up</h2>
+
+<div class="signup_form">
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign up</button>
   </form>
+</div>
+
 {% endblock %}
