--- a/myproject/myapp/templates/vote_list.html
+++ b/myproject/myapp/templates/vote_list.html
@@ -2,18 +2,16 @@
 
 {% block title %}Equalizer | Your Votes{% endblock %}
 
+{% block heading %}Your Votes{% endblock %}
+
 {% block content %}
 
-<h1>Your Votes</h1>
-
+<div class="vote_list">
 {% for post in posts %}
     <div class="post">
-        <div class="date">
-            {{ post.published_date }}
-        </div>
-        <h2>
+        <h3>
             <a href="{% url 'vote_detail' pk=post.pk %}">{{ post.player }}</a>
-        </h2>
+        </h3>
         <div>
             <table>
                 <tr>
@@ -43,7 +41,12 @@
             </table>
         </div>
         <p>{{ post.text|linebreaksbr }}</p>
+        <div class="date last_updated">
+            Last updated:
+            {{ post.published_date }}
+        </div>
     </div>
 {% endfor %}
+</div>
 
 {% endblock %}
