--- a/myproject/myapp/templates/signup.html
+++ b/myproject/myapp/templates/signup.html
@@ -3,9 +3,7 @@
 
 {% block title %}Sign Up{% endblock %}
 
-{% block heading %}
-<h2>New User Registration</h2>
-{% endblock %}
+{% block heading %}New User Registration{% endblock %}
 
 {% block content %}
 
