--- a/myproject/myapp/templates/base.html
+++ b/myproject/myapp/templates/base.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Team Equalizer{% endblock %}</title>
+  <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-  <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
